# AxiomEngine

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DAO_CHARTER.md  LICENSE  MEMORY.md  README.md  ROADMAP.md  api_query.py  auto_fix.py  axiom_chat.py  axiom_engine.py  axiom_ledger.db  axiom_logger.py  axiom_model_loader.py  build_standalone.py  check.sh  crucible.py  fast_coder.py  graph_export.py  index.html  inference_engine.py  ledger.py  maifest.json  maintain_feeds.py  node.py  p2p.py  pyproject.toml  query.py  requirements.txt  reset_axiom_state.sh  smart_coder.py  smart_coder_my.bak  sw.js  synthesizer.py  universal _extractor.py  universal_extractor.py  view_ledger.py  visualize_graph.py  zeitgeist_engine.py
.github/workflows/: build.yml
.hithub/workflows/: build.yml
AxiomClient/: main.py
CleanupTools/: all_facts_details.txt  discovery_rss_generated.py  extract_hashes_from_details.py  generate_feeds.py  get_all_facts.py  hash_facts.txt  remove_duplicates.py
docs/: blockchain.md  explain-synapse-weighting.md  fast-coder.md  fast-smart-coder.md  frontend-design.md  idle-cycles-and-behavior.md  index.html  ledger-pruning-refinement-fragment-awareness.md  metacognitive-engine.md  p2p-mesh-verification.md  running-nodes-and-ledger-tools.md
scripts/: reset_axiom_state.sh
src/: api_query.py  axiom_logger.py  axiom_model_loader.py  blockchain.py  code_introspector.py  config.py  conversation_patterns.py  crucible.py  data_quality.py  graph_export.py  inference_engine.py  ledger.py  metacognitive_engine.py  node.py  p2p.py  self_check.py  synthesizer.py  system_health.py  universal_extractor.py  zeitgeist_engine.py
src/axiom_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/axiom_server/: common.py  crucible.py  discovery_rss.py  hasher.py  ledger.py  node.py
src/axiom_server/p2p/: node.py
tests/: test_ledger.py  test_metacognitive_engine.py
tools/: mypy_annotate.py
